[package]
name = "fairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = "52.0.0"
axum = { version = "0.7.5", features = ["ws"] }
bincode = "1.3.3"
blake3 = "1.5.1"
bytes = "1.6.0"
clap = { version = "4.5.6", features = ["derive"] }
fastbloom = "0.7.1"
flate2 = "1.0.30"
futures = "0.3.30"
object_store = "0.10.1"
parquet = { version = "52.0.0", default-features = false, features = ["async", "arrow", "lz4", "object_store"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.1", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
zstd = "0.13.0"
